--- a/dev.bavdance.ru/wp-content/themes/bavdance/css/style.css
+++ b/dev.bavdance.ru/wp-content/themes/bavdance/css/style.css
@@ -28,6 +28,12 @@ video {
   display: inline-block;
   vertical-align: baseline;
 }
+.error-msg{
+    color:red;
+}
+.success-msg{
+    color:green;
+}
 audio:not([controls]) {
   display: none;
   height: 0;
