--- a/dev.bavdance.ru/wp-content/themes/bav £®â®¢®/css/bootstrap.css
+++ b/dev.bavdance.ru/wp-content/themes/bav £®â®¢®/css/bootstrap.css
@@ -1688,7 +1688,7 @@ output {
   line-height: 1.42857143;
   color: #555;
 }
-.form-control {
+.form-group .form-control {
   display: block;
   width: 100%;
   height: 34px;
